Fix word breaks in code blocks

--- a/resources/css/components/markup.css
+++ b/resources/css/components/markup.css
@@ -1,4 +1,4 @@
-.markup {
+.markup > *:not(pre) {
     @apply break-words;
 }
 
